@@ -19,11 +19,6 @@
     </text>
   </lang>
   <autodetect>
-    <general>
-      <commandset>MLC,PCL,PML,DW-PCL,BIDI-ECP</commandset>
-      <manufacturer>Hewlett-Packard</manufacturer>
-      <model>officejet 7300 series</model>
-    </general>
     <usb>
       <commandset>MLC,PCL,PML,DW-PCL,DESKJET,DYN</commandset>
       <description>6543</description>
