@@ -1,5 +1,7 @@
 2010-04-16  Tim Waugh <twaugh@redhat.com>
 
+	* db/source/printer/HP-OfficeJet_7300.xml: Removed incorrect
+	  extra IEEE 1284 Device ID (RH bug #577897).
 	* db/source/printer/Lexmark-E120.xml: Added IEEE 1284 Device
 	  ID (RH bug #577881).
 	* db/source/printer/HP-DeskJet_1280.xml: Added IEEE 1284
